corrected comment text overflow, reply bug, and navbar display based on current user

--- a/src/styling/index.css
+++ b/src/styling/index.css
@@ -49,6 +49,11 @@ body {
 .desktopDefaultBg {
   background-image: url(../assets/Background-negative-FINAL-2024px.jpg);
 }
+.single-comment-container {
+  display: grid;
+  grid-template-columns: 70px auto;
+  grid-template-rows: 2rem auto;
+}
 .footerMobileGrid {
   display: grid;
   grid-template-columns: 33% 33% 33%;
@@ -678,6 +683,19 @@ body {
   border-width: 1px;
 }
 
+.comment-avatar-container {
+  grid-column-start: 1;
+  grid-column-end: 2;
+  grid-row-start: 1;
+  grid-row-end: 3;
+}
+.comment-data-header {
+  grid-column-start: 2;
+  grid-column-end: 3;
+  grid-row-start: 1;
+  grid-row-end: 2;
+}
+
 .btn {
   cursor: pointer;
 }
@@ -699,6 +717,28 @@ body {
   border-radius: 0.5rem;
 }
 
+.comment-content {
+  overflow-wrap: break-word;
+  word-wrap: break-word;
+  -ms-word-break: break-all;
+  word-break: break-word;
+
+  /* Adds a hyphen where the word breaks, if supported (No Blink) */
+  -ms-hyphens: auto;
+  -moz-hyphens: auto;
+  -webkit-hyphens: auto;
+  hyphens: auto;
+  grid-column-start: 2;
+  grid-column-end: 3;
+  grid-row-start: 2;
+  grid-row-end: 3;
+}
+.comment-interaction-container {
+  grid-column-start: 2;
+  grid-column-end: 3;
+  grid-row-start: 3;
+  grid-row-end: 4;
+}
 
 /*
  * Effects
